# stackraise-mcp-server

./: .env.example  .gitignore  README.md  plan_ejecucion_mcp_abstracto.md  plan_v2..md  pyproject.toml
src/abstract_backend_mcp/: __init__.py  main.py
src/abstract_backend_mcp/adapters/: fastapi_adapter.py  mongodb_adapter.py  stackraise_adapter.py
src/abstract_backend_mcp/bootstrap/: detect_project.py  init_project.py
src/abstract_backend_mcp/context/: extractors_runtime.py  extractors_static.py  module_tree_utils.py  normalizer.py  provider.py  redaction.py  schemas.py
src/abstract_backend_mcp/core/: agent_prompt_layers.py  build_policy.py  builder_checkpoint.py  collaboration_policy.py  errors.py  instructions.py  logging.py  opencode_policy_sync.py  permissions.py  registry.py  server.py  settings.py
src/abstract_backend_mcp/templates/: AGENTS.md.j2  PROJECT.md.j2  agent_addendum_audit.txt  agent_addendum_build.txt  agent_addendum_doc.txt  agent_addendum_fix.txt  agent_addendum_plan.txt  env.j2  (+4 more)
tests/: test_agent_prompt_layers.py  test_builder_checkpoint.py  test_builder_checkpoint_cli.py  test_health_tools.py  test_init_project.py  test_instructions.py  test_permissions.py  test_registry.py  test_settings.py  test_stackraise_context_hybrid.py  test_stackraise_context_static.py  test_stackraise_module_index.py  test_stackraise_module_inventory.py  test_stackraise_provider_cache.py  test_stackraise_runtime_metadata.py  test_stackraise_schema_contract.py  test_stackraise_symbol_extraction.py  test_stackraise_tools_navigation.py  test_tool_error_envelopes.py
(+10 files in other folders)
